# dataclasses-jsonschema

./: pyproject.toml  setup.py
tests/: test_apispec_plugin.py  test_core.py
